discussion/kv_engine/162186/162186_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Implemented NexusKVStore::getManifestUid

Change-Id: Ibf5c5a0f59055d10b297fa89f90ea6bc956ffa97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-23 14:43:21.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-23 15:33:29.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34328/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/string_utilities.h:92:17:
error: invalid operands to binary expression ("std::ostream" (aka "basic_ostream<char>") and "const char [7]")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34328/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12773/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/string_utilities.h:92:17: error: invalid operands to binary expression ("std::ostream" (aka "basic_ostream<char>") and "const char [7]") [clang-diagnostic-error]
    return ostr << "<none>";
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/cstddef:125:5: note: candidate function template not viable: cannot convert argument of incomplete type "std::ostream" (aka "basic_ostream<char>") to "std::byte" for 1st argument
    operator<<(byte __b, _IntegerType __shift) noexcept
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:262:5: note: candidate function template not viable: no known conversion from "const char [7]" to "const std::error_code" for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/string_view:622:5: note: candidate template ignored: could not match "basic_string_view<type-parameter-0-0, type-parameter-0-1>" against "const char *"
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:6458:5: note: candidate template ignored: could not match "basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>" against "char const[7]"
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/string_utilities.h:87:15: note: candidate template ignored: could not match "optional<type-parameter-0-0>" against "char const[7]"
std::ostream& operator<<(std::ostream& ostr, const std::optional<T>& optional) {
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12773/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/string_utilities.h:92:17:
error: invalid operands to binary expression ("std::ostream" (aka "basic_ostream<char>") and "const char [7]") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12773/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11563/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2410/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14644/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2443/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15156/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22654/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13529/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
